kubernetes/manifests/socket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-service
  namespace: dev
spec:
  selector:
    app: socket
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
  type: ClusterIP
